--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -2,4 +2,7 @@
   .hero-section {
     background-image: url(https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-bg-sm.webp);
   }
+  .hero-section-ty {
+    background-image: url("./images/thank-you/hero-bg-sm.jpg");
+  }
 }
