--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,13 @@ img {
   height: 100%;
   max-width: 1038px;
 }
+.container-class-ty {
+  width: 100%;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  max-width: 344px;
+}
 
 .bg-F4F2EB {
   background-color: var(--bg-color);
@@ -117,7 +124,9 @@ img {
 .width-responsive {
   width: 50%;
 }
-
+.relative {
+  position: relative;
+}
 .d-flex {
   display: flex;
 }
@@ -141,6 +150,9 @@ img {
 .form-gap-responsive {
   gap: 34px;
 }
+.gap-1 {
+  gap: 4px;
+}
 .gap-10 {
   gap: 10px;
 }
@@ -157,6 +169,10 @@ img {
   align-items: center;
 }
 
+.justify-items-center {
+  justify-content: center;
+}
+
 .m-0 {
   margin: 0 !important;
 }
@@ -171,6 +187,9 @@ img {
 
 .pt-20 {
   padding-top: 20px !important;
+}
+.mt-20 {
+  margin-top: 20px;
 }
 
 .mt-30 {
@@ -294,6 +313,38 @@ header > section > nav > ul > li:hover {
   padding-bottom: 15rem;
 }
 
+.hero-section-ty {
+  min-height: 206px;
+  background-image: url("./images/thank-you/hero-bg.webp");
+  background-position: bottom center;
+  display: flex;
+  align-items: center;
+}
+
+.hero-section-ty > main > h3 {
+  color: #49887b;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px; /* 166.667% */
+}
+.hero-section-ty > main > p {
+  color: #666;
+  text-align: center;
+  font-family: "Greycliff CF";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 137.5% */
+}
+.hero-section-ty > main > div > div > span {
+  color: #49887b;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 21px; /* 150% */
+}
 .hero-clip-path {
   clip-path: ellipse(105% 50% at 52% 42%);
 }
@@ -1744,4 +1795,78 @@ picture:hover img {
 .pagination button.active {
   background: #49887b;
   color: white;
+}
+
+.ty-card {
+  margin-top: 24px;
+  padding: 12px 18px;
+  max-width: 300px;
+  border-radius: 12px;
+  background: #fff;
+  box-shadow: 4px 4px 12px 0px rgba(0, 0, 0, 0.12);
+}
+
+.ty-card h3 {
+  color: #4a4a4a;
+  font-family: "Greycliff CF";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 165%; /* 29.7px */
+}
+.ty-card label {
+  color: #666;
+  font-family: "Greycliff CF";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.ty-card p {
+  color: #666;
+  font-family: "Greycliff CF";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+}
+.ty-card span {
+  color: #797979;
+  font-family: "Greycliff CF";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px; /* 190.909% */
+}
+.ty-card span a {
+  opacity: 0.8;
+  color: #49887b;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  text-decoration-line: underline;
+}
+
+.ty-form-group-parent {
+  margin-top: 18px;
+}
+
+.ty-form-group {
+  position: relative;
+}
+.ty-form-group input {
+  padding-left: 12px;
+  padding-right: 32px;
+  width: 100%;
+  height: 43px;
+  border-radius: 30px;
+  border: 1px solid #e4e4e4;
+  background: #fff;
+}
+.ty-form-group svg {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12px;
 }
