--- a/styles.css
+++ b/styles.css
@@ -1798,7 +1798,7 @@ picture:hover img {
 }
 
 .ty-card {
-  margin-top: 24px;
+  /* margin-top: 24px; */
   padding: 12px 18px;
   max-width: 300px;
   border-radius: 12px;
@@ -1869,4 +1869,136 @@ picture:hover img {
   top: 50%;
   transform: translateY(-50%);
   right: 12px;
+}
+
+/* Step counter */
+
+.step-container {
+  width: 100%;
+}
+
+.step {
+  padding: 10px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+  background-color: cream;
+}
+
+.v-stepper {
+  position: relative;
+  /*   visibility: visible; */
+}
+
+/* regular step */
+.step .circle {
+  background-color: white;
+  border: 3px solid gray;
+  border-radius: 100%;
+  width: 20px; /* +6 for border */
+  height: 20px;
+  display: inline-block;
+}
+
+.step .line {
+  top: 20px;
+  left: 9px;
+  /*   height: 120px; */
+  height: 100%;
+
+  position: absolute;
+  border-left: 2px dashed gray;
+}
+
+.step.completed .circle {
+  visibility: visible;
+  background-color: #88aea6;
+  border-color: #88aea6;
+}
+
+.step.completed .line {
+  border-left: 2px dashed #88aea6;
+}
+
+.step.active .circle {
+  visibility: visible;
+  border-color: #88aea6;
+}
+
+.step.empty .circle {
+  visibility: hidden;
+}
+
+.step.empty .line {
+  /*     visibility: hidden; */
+  /*   height: 150%; */
+  top: 0;
+  height: 150%;
+}
+
+.step:last-child .line {
+  display: none;
+  /* border-left: 2px dashed white;
+  z-index: -1; */
+}
+
+.step-content {
+  width: 100%;
+  margin-left: 20px;
+}
+
+.ty-session-counter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-top: 20px;
+  width: 100%;
+  height: 100%;
+  min-height: 166px;
+  max-height: 166px;
+  background-image: url("/images/thank-you/timer-bg.webp");
+}
+
+.ty-session-counter h4 {
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.counter-card-container {
+  display: flex;
+  gap: 20px;
+}
+
+.counter-card {
+  width: 55px;
+  height: 49.049px;
+  border-radius: 10.436px;
+  background: #fff;
+  box-shadow: 0px 4.174px 20.872px 0px rgba(43, 43, 43, 0.14);
+}
+
+.counter-card h6 {
+  color: #49887b;
+  text-align: center;
+  font-family: "Greycliff CF";
+  font-size: 20.872px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.counter-card p {
+  color: var(--Grey, #818184);
+  text-align: center;
+  font-family: "Greycliff CF";
+  font-size: 12.523px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
