--- a/styles.css
+++ b/styles.css
@@ -1806,6 +1806,12 @@ picture:hover img {
   box-shadow: 4px 4px 12px 0px rgba(0, 0, 0, 0.12);
 }
 
+.ty-store-icons {
+  margin-top: 20px;
+  display: flex;
+  gap: 8px;
+}
+
 .ty-card h3 {
   color: #4a4a4a;
   font-family: "Greycliff CF";
@@ -1878,8 +1884,7 @@ picture:hover img {
 }
 
 .step {
-  padding: 10px;
-
+  padding: 10px 0px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -2001,4 +2006,11 @@ picture:hover img {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.ty-video {
+  margin-top: 14px;
+  width: 265px;
+  height: 468px;
+  border-radius: 12px;
 }
