--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -3,6 +3,6 @@
     background-image: url(https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-bg-sm.webp);
   }
   .hero-section-ty {
-    background-image: url("./images/thank-you/hero-bg-sm.jpg");
+    background-image: url("./images/thank-you/hero-bg-sm.webp");
   }
 }
