--- a/styles-lg.css
+++ b/styles-lg.css
@@ -6,6 +6,78 @@
   header > section > nav {
     display: none;
   }
+  .last-day-register {
+    position: relative;
+    transition: all 0.3s ease-in-out;
+    padding: 10px 15px;
+    background-color: #f4ebe1;
+    border-radius: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: #ba824e;
+    font-weight: 400;
+    outline: none;
+    overflow: hidden;
+    font-size: 16px;
+    /* display: block; */
+  }
+
+  .last-day-register:before {
+    animation: shine 5s ease-in-out infinite;
+  }
+
+  .last-day-register::before {
+    content: "";
+    position: absolute;
+    width: 150px;
+    height: 100%;
+    background-image: linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0) 10%,
+      #ba824e96,
+      rgba(255, 255, 255, 0) 90%
+    );
+    top: 0;
+    left: -100px;
+    opacity: 0.6;
+  }
+
+  @keyframes shine {
+    0% {
+      left: -100px;
+    }
+
+    50% {
+      left: 100%;
+    }
+
+    100% {
+      left: -100px;
+    }
+  }
+  .last-day-register p {
+    font-weight: 500;
+  }
+
+  @keyframes zoomText {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  .zoom-text {
+    /* font-size: 2rem; */
+    display: inline-block;
+    animation: zoomText 3s infinite ease-in-out;
+  }
   .hero-clip-path {
     clip-path: none;
   }
@@ -19,7 +91,7 @@
     background-color: #e6f3ef;
     padding-bottom: 13rem;
   }
- 
+
   .hero-content {
     flex-direction: column;
   }
