--- a/styles-lg.css
+++ b/styles-lg.css
@@ -150,7 +150,7 @@
     flex-wrap: wrap;
   }
   .not-for-items {
-    max-width: 156px;
+    max-width: 149px;
   }
   .not-for-items-text{
     font-size: 14px;
@@ -167,11 +167,25 @@
   .ws-iconbox:nth-child(3) {
     max-width: 100%;
   }
+  .ws-iconbox {
+    cursor: pointer;
+  }
+
+  .flip-card-inner {
+    transform: rotateY(0deg);
+  }
+
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
   .session-counter-home h3 {
     display: none;
   }
   .session-counter-home h4 {
     display: block;
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
   }
   .workshop-include-section {
     padding: 20px 19px 24px 19px;
@@ -194,5 +208,17 @@
 
   .weekday {
     font-size: 14px;
+  }
+  .terms label{
+    font-size: 13px;
+  }
+  .form-input-container{
+    gap: 10px;
+  }
+  .register-box {
+    max-height: 729px;
+  }
+  .register-form-bottom{
+    margin-top: 34px;
   }
 }
