--- a/styles-sm.css
+++ b/styles-sm.css
@@ -15,4 +15,14 @@
   .grid-responsive {
     grid-template-columns: repeat(3, 1fr);
   }
+  .counter-card {
+    width: 55px;
+    height: 49.049px;
+  }
+  .counter-card h6 {
+    font-size: 20px;
+  }
+  .counter-card p {
+    font-size: 12px;
+  }
 }
