fixed github issues

--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -10,9 +10,9 @@
   .hero-section-ty {
     background-image: url("./images/thank-you/hero-bg-sm.webp");
   }
-  /* .ty-session-counter {
+  .ty-session-counter {
     background-image: url("https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/timer-bg.webp");
-  } */
+  }
   .grid-responsive {
     grid-template-columns: repeat(1, 1fr);
   }
